--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
                 <h3>Memories</h3>
                 <div class="masonry">
                     <div class="masonry-item">
-                        <img src="fotoos.JPG" alt="Memory 1">
+                        <img src="FullSizeRender.jpeg" alt="Memory 1">
                     </div>
                 </div>
               <div class="masonry">
                     <div class="masonry-item">
-                        <img src="fotoos.JPG" alt="Memory 1">
+                        <img src="IMG_3396.jpeg" alt="Memory 1">
                     </div>
                 </div>
               <div class="masonry">
                     <div class="masonry-item">
-                        <img src="fotoos.JPG" alt="Memory 1">
+                        <img src="IMG_1069.jpeg" alt="Memory 1">
                     </div>
                 </div>
               <div class="masonry">
                     <div class="masonry-item">
-                        <img src="fotoos.JPG" alt="Memory 1">
+                        <img src="IMG_4865.jpeg" alt="Memory 1">
                     </div>
                 </div>
             </div>
